<resources>
    <string name="app_name">iLearn</string>
    <string name="icon_description">icon_description</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="app_slogan">Learn anytime, anything</string>
    <string name="sign_in">Sign In</string>
    <string name="start_learning">Start Learning</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="new_user">New User?</string>
    <string name="please_wait">Please wait…</string>
    <string name="ok">OK</string>
    <string name="finish">Finish</string>
    <string name="name">Name</string>
    <string name="welcome_to_ilearn">Welcome to iLearn</string>
    <string name="student">Student</string>
    <string name="instructor">Instructor</string>
    <string name="article_writer">Article Writer</string>
    <string name="share_now">Share now</string>
    <string name="news_heading">News Heading</string>
    <string name="news_title">News Title</string>
    <string name="news_body">News Body</string>
    <string name="add_news">Add News</string>
    <string name="add_image">Add Image</string>
    <string name="have_a_news_to_share">Have a news to share?</string>
    <string name="all_educational_news">All Educational News</string>
    <string name="want_to_offer_a_subject">Want to offer a subject?</string>
    <string name="subject_name">Subject Name</string>
    <string name="add_subject">Add Subject</string>
    <string name="quiz_name">Quiz Name</string>
    <string name="quiz_description">Quiz Description</string>
    <string name="want_to_add_a_new_quiz">Want to add a new quiz?</string>
    <string name="all_subject">All Subject</string>
    <string name="enter_here">Enter here</string>
    <string name="add_new_question">Add New Question</string>
    <string name="question">Question</string>
    <string name="negative_marks">Negative Marks</string>
    <string name="add_edit_question_for_the_quiz">Add/Edit question for the quiz</string>
    <string name="positive_marks">Positive Marks</string>
    <string name="option">Option</string>
    <string name="correct_option">Correct Option</string>
    <string name="change_name">Change Name</string>
    <string name="sign_out">Sign Out</string>
    <string name="check_the_news_details">Check the News details</string>
    <string name="manage_news">Manage News</string>
    <string name="check_all_the_news_and_manage_them_accordingly">Check all the news and manage them accordingly</string>
    <string name="manage_your_subjects_and_upload_content_related_to_them">Manage your subjects and upload content related to them</string>
    <string name="manage_subjects">Manage Subjects</string>
    <string name="add_new_quiz">Add New Quiz</string>
    <string name="add_quiz">Add Quiz</string>
    <string name="edit_quiz">Edit Quiz</string>
    <string name="select_the_file_to_send">Select the file to send</string>
    <string name="subject_description">Subject Description</string>
    <string name="edit_subject">Edit Subject</string>
    <string name="save_status">Save Status</string>
    <string name="change_status">Change Status</string>
    <string name="edit_news">Edit News</string>
    <string name="add_new_news">Add New News</string>
    <string name="add_new_subject">Add New Subject</string>
    <string name="quiz_time_minutes">Quiz Time (minutes)</string>
    <string name="add_new_section">Add New Section</string>
    <string name="all_section_of_the_quiz">All Section of the quiz</string>
    <string name="all_questions_of_the_section">All Questions of the section</string>
    <string name="add_option">Add Option</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="all_ilearn_subjects">All iLearn Subjects</string>
    <string name="show_all">Show All</string>
    <string name="offered_subjects">Offered Subjects</string>
    <string name="quiz_time">Quiz Time</string>
    <string name="resumeable">Resumeable</string>
    <string name="total_sections">Total Sections</string>
    <string name="total_marks">Total Marks</string>
    <string name="attempt_now">Attempt Now</string>
    <string name="later">Later</string>
    <string name="total_questions">Total Questions</string>
    <string name="submit_test">Submit Test</string>
    <string name="number_0">0</string>
    <string name="answered">Asnwered</string>
    <string name="wrong">Wrong</string>
    <string name="not_answered">Not Answered</string>
    <string name="marked">Marked</string>
    <string name="not_visited">Not Visited</string>
    <string name="view">View</string>
    <string name="view_questions">View Questions</string>
    <string name="total_attempted_percent">Total Attempted %</string>
    <string name="correct">Correct</string>
    <string name="correct_percent">Correct %</string>
    <string name="incorrect">Incorrect</string>
    <string name="incorrect_percent">Incorrect %</string>
    <string name="result_analysis">Result Analysis</string>
    <string name="total_negative">Total Negative</string>
    <string name="accuracy">Accuracy</string>

    <string name="default_score">..</string>
    <string name="score">Score</string>
    <string name="rank">Rank</string>
    <string name="analysis">Analysis</string>
    <string name="skipped">Skipped</string>
    <string name="section_breakdown">Section Breakdown</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="submit_section">Submit Section</string>
    <string name="accuracy_percent">Accuracy %</string>
    <string name="total_attempted">Total Attempted</string>
    <string name="view_result">View Result</string>
    <string name="practice_quiz">Practice Quiz</string>
    <string name="failed_to_send">Failed to send..</string>
    <string name="type_here">Type here</string>
    <string name="live_chat">Live Chat</string>
    <string name="subjects_for_articles">Subjects for Articles</string>
    <string name="all_articles_of_the_subjects">All Articles of the subjects</string>
    <string name="add_new_article">Add New Article</string>
    <string name="article_name">Article Name</string>
    <string name="article_category">Article Category</string>
    <string name="article_section_name">Article Section Name</string>
    <string name="article_section_content">Article Section Content</string>
    <string name="share_amazing_articles">Share Amazing Articles</string>
    <string name="add_article">Add Article</string>
    <string name="add_section">Add Section</string>
    <string name="add_sections">Add Sections</string>
    <string name="edit_article">Edit Article</string>
    <string name="quiz_and_articles_of_subject">Quiz and Articles of Subject</string>
    <string name="all_articles">All Articles</string>
    <string name="read_free_articles">Read Free Articles</string>
    <string name="add_a_comment">Add a Comment</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="all_chats">All Chats</string>


</resources>