<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="Question"
            type="com.openlearning.ilearn.quiz.admin.modals.QuizQuestion" />


    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGrayLight"
        android:padding="16dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/TVAskingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/add_edit_question_for_the_quiz"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/ETQuestionName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints="email"
                android:background="@drawable/edit_text_bg"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/question"
                android:inputType="text|textMultiLine"
                android:minHeight="200dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:text="@{Question.name}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TVAskingText" />

            <EditText
                android:id="@+id/ETPositive"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="16dp"
                android:autofillHints="name"
                android:background="@drawable/edit_text_bg"
                android:ems="10"
                android:hint="@string/positive_marks"
                android:inputType="numberDecimal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@{String.valueOf(Question.positive)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ETQuestionName" />

            <EditText
                android:id="@+id/ETNegative"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="16dp"
                android:autofillHints="name"
                android:background="@drawable/edit_text_bg"
                android:ems="10"
                android:hint="@string/negative_marks"
                android:inputType="numberDecimal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@{String.valueOf(Question.negative)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ETPositive" />


            <TextView
                android:id="@+id/TVOptionShowing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="All Options"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ETNegative" />

            <LinearLayout
                android:id="@+id/LLQuestionOptions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TVOptionShowing">


            </LinearLayout>

            <Button
                android:id="@+id/BTNAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="8dp"
                android:text="@string/add"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/LLQuestionOptions" />

            <Button
                android:id="@+id/BTNAddOptionSpace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:backgroundTint="@color/colorGreenDark"
                android:text="@string/add_option"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="@+id/TVOptionShowing"
                app:layout_constraintStart_toEndOf="@+id/TVOptionShowing"
                app:layout_constraintTop_toTopOf="@+id/TVOptionShowing" />

            <ImageView
                android:id="@+id/IVCancel"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/icon_description"
                android:padding="4dp"
                app:layout_constraintBottom_toBottomOf="@+id/TVAskingText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/TVAskingText"
                app:srcCompat="@drawable/ic_close_24" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>