<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="Quiz"
            type="com.openlearning.ilearn.quiz.admin.modals.Quiz" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/TVQuizName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@{Quiz.quizName}"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="MS Word Basics" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/quiz_time"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/TVQuizName" />


        <TextView
            android:id="@+id/TVQuizTimeShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text='@{Quiz.quizDurationMin + " min"}'
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/textView3"
            tools:text="10 min" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.6" />

        <TextView
            android:id="@+id/TVResume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/resumeable"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/TVTotalQuestions" />

        <ImageView
            android:id="@+id/textView6"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/icon_description"
            android:src="@drawable/ic_checked"
            app:layout_constraintBottom_toBottomOf="@+id/TVResume"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/TVResume" />

        <TextView
            android:id="@+id/TVTotalSections"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/total_sections"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/TVTotalSectionsShowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text='@{Quiz.quizSectionList.size() + " sections"}'
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/TVTotalSections"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/TVTotalSections"
            tools:text="1 sections" />

        <TextView
            android:id="@+id/TVTotalQuestions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/total_questions"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/TVTotalMarks" />

        <TextView
            android:id="@+id/TVTotalQuestionsShowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(Quiz.totalMarks)}"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/TVTotalMarks"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/TVTotalMarks"
            tools:text="100" />

        <TextView
            android:id="@+id/TVTotalMarks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/total_marks"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/TVTotalSections" />

        <TextView
            android:id="@+id/TVTotalMarksShowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(Quiz.totalQuestions)}"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/TVResume"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/TVTotalMarks"
            tools:text="100" />

        <Button
            android:id="@+id/BTNAttemptNow"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/attempt_now"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TVResume" />

        <Button
            android:id="@+id/BTNLater"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/colorGrayLight"
            android:text="@string/later"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/BTNAttemptNow" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>