<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>


        <variable
            name="Option"
            type="com.openlearning.ilearn.quiz.modals.QuestionOption" />

    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="4dp">


            <EditText
                android:id="@+id/ETOption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints="email"
                android:background="@drawable/edit_text_bg"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/option"
                android:inputType="text|textMultiLine"
                android:minHeight="60dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/SWCorrectOption" />

            <ImageView
                android:id="@+id/IVDelete"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/icon_description"
                app:layout_constraintBottom_toBottomOf="@+id/SWCorrectOption"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/SWCorrectOption"
                app:srcCompat="@drawable/ic_close_24" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/SWCorrectOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correct_option"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

</layout>